tail-extend/tests/ui/no_comma_after_visibility.stderr
error: Expected comma after visibility
 --> tests/ui/no_comma_after_visibility.rs:3:32
  |
3 | #[make_dst_builder(create, pub no_std)]
  |                                ^^^^^^
